intTests/test_type_errors/unify007.log.good
Loading file "unify007.saw"
Type errors:
  unify007.saw:7:37-7:41: Error: Type mismatch.
    Expected: Int
    Found:    String

  unify007.saw:7:30-7:31: Note: The type Int arises from the type of this term
  unify007.saw:7:37-7:41: Note: The type String arises from the type of this term


FAILED
